# TDA_TCA

./: README.md  iar_estatus_reservaciones.csv  main.py  pyproject.toml
