[project]
name = "tda-tca"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cmake>=4.0.2",
    "giotto-tda>=0.6.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pyinform>=0.2.0",
    "scikit-learn>=1.6.1",
]
